--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -3,7 +3,7 @@
 </script>
 
 <div class="container-fluid new-donation">
-  <div class="col-lg-6 col-lg-offset-3" align="center"">
+  <div class="col-lg-6 col-lg-offset-3" align="center">
 
   <h1><%= title 'Add Donation' %></h1>
   <% description 'Add the details of your new donation.' %>
