--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer">
-  <div class="container-fluid">
-    <div class="col-lg-8 col-lg-offset-2">
+  <div class="container-fluid" align="center">
+    <div class="col-lg-6 col-lg-offset-3">
       <span class="text-muted">
-        HELLO FOOTER! :D
+        Share the Food | Questions? Contact us at: contact@sharethefood.net
       </span>
     </div>
   </footer>
