--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
     gtag('config', 'UA-139559800-1');
   </script>
 
+  <!-- Used to redirect http requests to httpS -->
+  <script>
+    var host = "www.sharethefood.net";
+    if ((host == window.location.host) && (window.location.protocol != "https:")){
+      window.location.protocol = "https";
+    }
+  </script>
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,7 +40,7 @@
 <body>
   <%= render 'layouts/navigation' %>
   <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
+  <div class="alert alert-<%= key %>"><%= value %></div>
   <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
